--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /data/*
+/app/assets/builds/*
+!/app/assets/builds/.keep
