Working tailwind css, sidebar, dashboard index

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
     environment:
       - RAILS_ENV=development
     stdin_open: true
+    tty: true
     networks:
       default:
         aliases:
