--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "admin:docker": "nx serve admin-panel --host=0.0.0.0 --port=3001"
   },
   "private": true,
   "dependencies": {
